fixed word-wrap

--- a/assets/scss/_init.scss
+++ b/assets/scss/_init.scss
@@ -14,6 +14,7 @@ body{
   background-color:$main2*0.94;
   color:$main1;
   list-style-position: inside;
+  word-wrap: break-word;
   img{
     max-width:100%;
     border:none;
